--- a/pfsimulator/parflow_lib/CMakeLists.txt
+++ b/pfsimulator/parflow_lib/CMakeLists.txt
@@ -160,19 +160,50 @@ if( ${PARFLOW_HAVE_OMP} )
   set_source_files_properties(axpy.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(copy.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(innerprod.c PROPERTIES LANGUAGE CXX)
+  set_source_files_properties(matrix.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(matvec.c PROPERTIES LANGUAGE CXX)
+  set_source_files_properties(mg_semi.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(mg_semi_restrict.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(mg_semi_prolong.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(nl_function_eval.c PROPERTIES LANGUAGE CXX)
+  set_source_files_properties(problem_phase_density.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(problem_phase_rel_perm.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(problem_phase_source.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(problem_saturation.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(rb_GS_point.c PROPERTIES LANGUAGE CXX)
   set_source_files_properties(richards_jacobian_eval.c PROPERTIES LANGUAGE CXX)
+  set_source_files_properties(vector.c PROPERTIES LANGUAGE CXX)
+  set_source_files_properties(vector_utilities.c PROPERTIES LANGUAGE CXX)
 endif( ${PARFLOW_HAVE_OMP} )
 
+if( ${PARFLOW_HAVE_CUDA} )
+  set_source_files_properties(cu_axpy.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_copy.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_innerprod.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(globals.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_matrix.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_matvec.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_mg_semi.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_mg_semi_restrict.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_mg_semi_prolong.c PROPERTIES LANGUAGE CUDA)
+  #set_source_files_properties(nl_function_eval.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_problem_phase_density.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_problem_phase_rel_perm.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_problem_phase_source.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_problem_saturation.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_rb_GS_point.c PROPERTIES LANGUAGE CUDA)
+  #set_source_files_properties(richards_jacobian_eval.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_vector.c PROPERTIES LANGUAGE CUDA)
+  set_source_files_properties(cu_vector_utilities.c PROPERTIES LANGUAGE CUDA)
+endif( ${PARFLOW_HAVE_CUDA} )
 
 add_library(pfsimulator ${SRC_FILES})
+
+# Separable compilation must be active due to the following declaration:
+# globals.h: extern __constant__  Globals *dev_globals_ptr;
+if( ${PARFLOW_HAVE_CUDA} )
+  set_target_properties(pfsimulator PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+endif( ${PARFLOW_HAVE_CUDA} )
 
 target_link_libraries(pfsimulator pfkinsol amps cjson ${PARFLOW_ETRACE_LIBRARY})
 
